erDiagram
    STORE ||--o{ SALE : produces
    CUSTOMER ||--o{ SALE : places
    CUSTOMER ||--o| MEMBER : upgrades_to
    SALE ||--|{ SALE_ITEM : contains
    PRODUCT ||--o{ SALE_ITEM : sold_as
    CATEGORY ||--o{ PRODUCT : classifies
    CATEGORY ||--o{ CATEGORY : parent_of
    PRODUCT ||--o| BOOK : extends
    PUBLISHER ||--o{ BOOK : publishes
    BOOK ||--o{ BOOK_AUTHOR : has
    AUTHOR ||--o{ BOOK_AUTHOR : writes
    BOOK ||--o{ BOOK_TRANSLATOR : has
    TRANSLATOR ||--o{ BOOK_TRANSLATOR : translates
    SUPPLIER ||--o{ SUPPLIER_PRODUCT : supplies
    PRODUCT ||--o{ SUPPLIER_PRODUCT : supplied_by
    STORE ||--o{ INVENTORY : owns
    PRODUCT ||--o{ INVENTORY : stocked_as
    SUPPLIER ||--o{ PURCHASE_ORDER : receives
    STORE ||--o{ PURCHASE_ORDER : orders_for
    PURCHASE_ORDER ||--|{ PURCHASE_ORDER_ITEM : contains
    PURCHASE_ORDER ||--o{ STOCK_IN : inbound_source
    STOCK_IN ||--|{ STOCK_IN_ITEM : contains
    PRODUCT ||--o{ PURCHASE_ORDER_ITEM : purchased_as
    PRODUCT ||--o{ STOCK_IN_ITEM : inbound_as
    SYSTEM_USER ||--o{ USER_ROLE : has
    ROLE ||--o{ USER_ROLE : assigned
    ROLE ||--o{ ROLE_PERMISSION : owns
    PERMISSION ||--o{ ROLE_PERMISSION : grants
